--- a/BlendWorks Client/App.config
+++ b/BlendWorks Client/App.config
@@ -13,6 +13,12 @@
             <setting name="BlenderExecutable" serializeAs="String">
                 <value>C:\Program Files\Blender Foundation\Blender\blender.exe</value>
             </setting>
+            <setting name="rendered_frames" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="upgraded" serializeAs="String">
+                <value>False</value>
+            </setting>
         </BlendWorksClient.MySettings>
     </userSettings>
 </configuration>
