--- a/BlendWorks Server/App.config
+++ b/BlendWorks Server/App.config
@@ -16,6 +16,9 @@
             <setting name="rendered_frames" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="upgraded" serializeAs="String">
+                <value>False</value>
+            </setting>
         </BlendWorksServer.MySettings>
     </userSettings>
 </configuration>
