--- a/BlendWorks Server/My Project/Settings.settings
+++ b/BlendWorks Server/My Project/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="rendered_frames" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="upgraded" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
